--- a/404_page.html
+++ b/404_page.html
@@ -32,7 +32,7 @@
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search here..." aria-label="Search">
             <i class="fa-solid fa-magnifying-glass fs-5"></i>
-            <button class="btn" id="switchButton" title="Click to switch theme" onclick="myFunction()">
+            <button class="btn" id="switchButton" title="Click to switch theme" onclick="darkMode()">
               <i class="fa-regular fa-moon btn fs-4 me-2 text-white" id="moon"></i>
               <i class="fa-regular fa-sun btn fs-4 me-2 " id="sun"></i>
             </button>
@@ -187,7 +187,7 @@
   </script>
 
    <!-- file JS -->
-   <script src="./js/script.js"></script>
+   <script src="./js/dark_theme.js"></script>
 
 </body>
 
