--- a/elements.html
+++ b/elements.html
@@ -57,7 +57,7 @@
         <h3>Overview</h3>
         <h5 class="mt-4">container</h5>
         <span>While containers can be nested, most layouts do not require a nested container.</span>
-        <div class="bg d-flex justify-content-center align-items-center rounded-2 mt-3 border">
+        <div class="bg border d-flex justify-content-center align-items-center rounded-2 mt-3">
             <div class="left me-2 rounded-2"></div>
             <div class="right rounded-2"></div>
         </div>
@@ -143,7 +143,7 @@
         </div>
         <h4 class="mt-5 text-dark fw-bold">Blockquotes With Naming A Source</h4>
         <div class="blockquotes border rounded-2 mt-5">
-            <blockquote class="blockquotes__bg border border-start-0 border-end-0 rounded-2">
+            <blockquote class="blockquotes__bg border-start-0 border-end-0 rounded-2">
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                 <span class="blockquote-footer mt-1">Someone famous in <cite title="Source Title">Source Title</cite></span>
             </blockquote>
@@ -188,7 +188,7 @@
         </div>
         <h4 class="mt-5 text-dark fw-bold">Alignments</h4>
         <div class="blockquotes border rounded-2 mt-5 text-end">
-            <blockquote class="blockquotes__bg border border-start-0 border-end-0 rounded-2">
+            <blockquote class="blockquotes__bg border-start-0 border-end-0 rounded-2">
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                 <span class="blockquote-footer mt-1">Someone famous in <cite title="Source Title">Source Title</cite></span>
             </blockquote>
@@ -296,7 +296,7 @@
             </div>
         </div>
         <h4 class="mt-5 text-dark fw-bold">Buttons</h4>
-        <div class="buttons mt-4 border rounded-2">
+        <div class="buttons border mt-4 rounded-2">
             <div class="buttons__bg ">
                 <button type="button" class="btn btn-primary">Primary</button>
                 <button type="button" class="btn btn-secondary">Secondary</button>
@@ -327,7 +327,7 @@
             </div>
         </div>
         <h5 class="mt-5 fw-bold">Outline buttons</h5>
-        <div class="outline mt-4 border rounded-2">
+        <div class="outline border mt-4 rounded-2">
             <div class="outline__bg">
                 <button type="button" class="btn btn-outline-primary">Primary</button>
                 <button type="button" class="btn btn-outline-secondary">Secondary</button>
@@ -1170,7 +1170,7 @@ Launch demo modal
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
 
-  <script src="./js/script.js"></script>
+  <script src="./js/dark_theme.js"></script>
 </body>
 
 </html>
