--- a/services.html
+++ b/services.html
@@ -411,10 +411,8 @@
   </script>
 
   <!-- File JS -->
-  <script src="./js/script.js"></script>
+  <script src="./js/dark_theme.js"></script>
 
-  <!-- Back to top animation -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 
 </html>
