--- a/404_page.html
+++ b/404_page.html
@@ -120,14 +120,14 @@
               </div>
             </div>
             <div class="col-2">
-              <div class="categories me-5">
+              <div class="categories ">
                 <h4 class="mb-4">Categories</h4>
                 <p>Drinks</p>
                 <p>Food</p>
               </div>
             </div>
             <div class="col-2">
-              <div class="archive me-5">
+              <div class="archive me-3">
                 <h4 class="mb-4">Archives</h4>
                 <p>March 2021</p>
               </div>
