--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search here..." aria-label="Search">
             <i class="fa-solid fa-magnifying-glass fs-5"></i>
-            <button class="btn" id="switchButton" title="Click to switch theme">
+            <button class="btn" id="switchButton" title="Click to switch theme" onclick="darkMode ()">
               <i class="fa-regular fa-moon btn fs-4 me-2 text-white" id="moon"></i>
               <i class="fa-regular fa-sun btn fs-4 me-2 " id="sun"></i>
             </button>
@@ -198,13 +198,13 @@
             the mouth.
           </h1>
           <div class="boxes d-flex justify-content-center mt-5">
-            <a href="#url">
+            <a href="#url" class="left">
               <button type="button" class="btn btn-outline-light btn-lg me-4">
                 Read More <i class="fa-solid fa-chevron-right"></i>
               </button>
             </a>
-            <a href="#url">
-              <button type="button" class="btn btn-secondary btn-lg ">
+            <a href="#url" class="right">
+              <button type="button" class="btn btn-secondary btn-lg" id="highlight">
                 Contact Us <i class="fa-solid fa-chevron-right"></i>
               </button>
             </a>
@@ -311,86 +311,96 @@
   <!-- END MENU -->
   </main>
   <footer>
-  <!-- FOOTER -->
-    <div class="container">
-      <div class="content d-flex">
-        <!-- div 1 -->
-        <div class="diner me-3">
-          <a href="#">
-            <h1 class="mb-4">Diner</h1>
-          </a>
-          <p class="text-white">
-            Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit.
-          </p>
-          <div class="icons d-flex">
-            <!-- icon 1 -->
-            <div class="bg  border-dark-subtle p-4 rounded-3 me-2">
-              <a href="https://www.facebook.com/w3layouts/">
-                <i class="fa-brands fa-facebook-f"></i>
-              </a>
+    <!-- FOOTER -->
+      <div class="container">
+        <div class="content">
+          <div class="container">
+            <div class="row">
+              <div class="col-4">
+                <div class="diner me-3">
+                  <div class="text">
+                    <a href="#">
+                      <h4 class="mb-4">Diner</h4>
+                    </a>
+                    <p class="text-white">
+                      Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit.
+                    </p>
+                  </div>
+                  <div class="icons d-flex">
+                    <!-- icon 1 -->
+                    <div class="bg  border-dark-subtle p-4 rounded-3 me-2">
+                      <a href="https://www.facebook.com/w3layouts/">
+                        <i class="fa-brands fa-facebook-f"></i>
+                      </a>
+                    </div>
+                    <!-- icon 2 -->
+                    <div class="bg border-dark-subtle p-4 rounded-3 me-2">
+                      <a href="https://twitter.com/W3layouts">
+                        <i class="fa-brands fa-twitter"></i>
+                      </a>
+                    </div>
+                    <!-- icon 3 -->
+                    <div class="bg border-dark-subtle p-4 rounded-3 me-2">
+                      <a href="https://www.instagram.com/w3layouts_/">
+                        <i class="fa-brands fa-instagram"></i>
+                      </a>
+                    </div>
+                    <!-- icon 4 -->
+                    <div class="bg border-dark-subtle p-4 rounded-3">
+                      <a href="https://www.linkedin.com/company/w3layouts/?originalSubdomain=in">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-2">
+                <div class="categories ">
+                  <h4 class="mb-4">Categories</h4>
+                  <p>Drinks</p>
+                  <p>Food</p>
+                </div>
+              </div>
+              <div class="col-1">
+                <div class="archive me-3">
+                  <h4 class="mb-4">Archives</h4>
+                  <p>March 2021</p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="subcribe">
+                  <h4 class="mb-4">Subscribe to our Newsletter</h4>
+                  <p class="mb-4">Enter your email and receive the latest news, 
+                    <br> 
+                    updates and special offers from us.
+                  </p>
+                  <div class="mb-3">
+                    <!-- <label for="" class="form-label">Email</label> -->
+                    <input type="email" class="form-control" name="" id="Email" aria-describedby="emailHelpId" placeholder="Your Email Address">
+                    <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
+                  </div>
+                  <div class="button">
+                    <button type="button" class="btn btn-secondary btn-lg">Subcribe Now</button>
+                  </div>
+                </div>
+              </div>
             </div>
-            <!-- icon 2 -->
-            <div class="bg border-dark-subtle p-4 rounded-3 me-2">
-              <a href="https://twitter.com/W3layouts">
-                <i class="fa-brands fa-twitter"></i>
-              </a>
-            </div>
-            <!-- icon 3 -->
-            <div class="bg border-dark-subtle p-4 rounded-3 me-2">
-              <a href="https://www.instagram.com/w3layouts_/">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-            </div>
-            <!-- icon 4 -->
-            <div class="bg border-dark-subtle p-4 rounded-3">
-              <a href="https://www.linkedin.com/company/w3layouts/?originalSubdomain=in">
-                <i class="fa-brands fa-linkedin-in"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- div 2 -->
-        <div class="categories me-5">
-          <h1 class="mb-4">Categories</h1>
-          <p>Drinks</p>
-          <p>Food</p>
-        </div>
-        <!-- div 3 -->
-        <div class="archive me-5">
-          <h1 class="mb-4">Archives</h1>
-          <p>March 2021</p>
-        </div>
-        <!-- div 4 -->
-        <div class="subcribe">
-          <h1 class="mb-4">Subscribe to our Newsletter</h1>
-          <p class="mb-4">Enter your email and receive the latest news, 
-            <br> 
-            updates and special offers from us.
-          </p>
-          <div class="mb-3">
-            <!-- <label for="" class="form-label">Email</label> -->
-            <input type="email" class="form-control" name="" id="Email" aria-describedby="emailHelpId" placeholder="Your Email Address">
-            <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
-          </div>
-          <div class="button">
-            <button type="button" class="btn btn-secondary btn-lg">Subcribe Now</button>
           </div>
         </div>
       </div>
+    <!-- END FOOTER -->
+  
+    <!-- BACK TO TOP -->
+    <div class="gohome d-flex justify-content-end">
+        <div class="backtotop d-flex justify-content-center align-items-center rounded-5">
+          <a href="#myHeader">
+            <i class="fa-solid fa-angle-up"></i>
+          </a>
+        </div>
     </div>
-  <!-- END FOOTER -->
-
-  <!-- BACK TO TOP -->
-  <div class="gohome d-flex justify-content-end">
-    <div class="backtotop d-flex justify-content-center align-items-center rounded-5">
-      <a href="#myHeader">
-        <i class="fa-solid fa-angle-up"></i>
-      </a>
-    </div>
-  </div>
-  <!-- END BACK TO TOP -->
-
-  <!-- COPYRIGHT -->
+    <!-- END BACK TO TOP -->
+  
+    <!-- COPYRIGHT -->
     <div class="copyright">
       <div class="container">
         <div class="text d-flex">
@@ -399,8 +409,8 @@
         </div>
       </div>
     </div>
-  <!-- END COPYRIGHT -->
-  </footer>
+    <!-- END COPYRIGHT -->
+    </footer>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
