menu pop up da xong

--- a/elements.html
+++ b/elements.html
@@ -37,7 +37,38 @@
               <i class="fa-regular fa-moon btn fs-4 me-2 text-white" id="moon"></i>
               <i class="fa-regular fa-sun btn fs-4 me-2 " id="sun"></i>
             </button>
-            <i class="fa-solid fa-bars btn fs-4 text-white"></i>
+                        <!-- MENU POP UP -->
+            
+            <!-- Button trigger modal -->
+<button type="button" class="border-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <i class="fa-solid fa-bars btn fs-4 text-white"></i>
+  </button>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class=" modal-content text-center">
+        <!-- <div class="modal-header"> -->
+          <!-- <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1> -->
+          <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        <!-- </div> -->
+        <!-- <div class="modal-body text-center"> -->
+          <a href="">About</a> <br>
+          <a href="http://127.0.0.1:5500/services.html?#myHeader">Services</a> <br>
+          <a href="">Blog Posts</a> <br>
+          <a href="http://127.0.0.1:5500/404_page.html?#myHeader">404 page</a> <br>
+          <a href="http://127.0.0.1:5500/elements.html?#myHeader">Elements</a> <br>
+          <a href="">Contact</a> <br>
+          <a href="">Landing page</a>
+        <!-- </div> -->
+        <!-- <div class="modal-footer"> -->
+          <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+          <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+        <!-- </div> -->
+      </div>
+    </div>
+  </div>
+              <!-- END MENU POP UP -->
           </form>
         </div>
       </nav>
