--- a/404_page.html
+++ b/404_page.html
@@ -52,7 +52,7 @@
         <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
       <!-- </div> -->
       <!-- <div class="modal-body text-center"> -->
-        <a href="">Home</a> <br>
+        <a href="http://127.0.0.1:5502/home.html">Home</a> <br>
         <a href="">About</a> <br>
         <a href="http://127.0.0.1:5500/services.html?#myHeader">Services</a> <br>
         <a href="">Blog Posts</a> <br>
