--- a/elements.html
+++ b/elements.html
@@ -53,13 +53,13 @@
           <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
         <!-- </div> -->
         <!-- <div class="modal-body text-center"> -->
-          <a href="http://127.0.0.1:5502/home.html">Home</a> <br>
+          <a href="http://127.0.0.1:5502/index.html">Home</a> <br>
           <a href="">About</a> <br>
-          <a href="http://127.0.0.1:5500/services.html?#myHeader">Services</a> <br>
+          <a href="http://127.0.0.1:5502/services.html">Services</a> <br>
           <a href="">Blog Posts</a> <br>
-          <a href="http://127.0.0.1:5500/404_page.html?#myHeader">404 page</a> <br>
-          <a href="http://127.0.0.1:5500/elements.html?#myHeader">Elements</a> <br>
-          <a href="">Contact</a> <br>
+          <a href="http://127.0.0.1:5502/404_page.html">404 page</a> <br>
+          <a href="http://127.0.0.1:5502/elements.html">Elements</a> <br>
+          <a href="http://127.0.0.1:5502/contact.html">Contact</a> <br>
           <a href="">Landing page</a>
         <!-- </div> -->
         <!-- <div class="modal-footer"> -->
