chinh responsive 404, chinh video

--- a/index.html
+++ b/index.html
@@ -469,12 +469,12 @@
         <!-- khi bấm vào nút play thì video sẽ pop up ở giữa trang web, background xung quanh video sẽ bị mờ -->
         <!-- Button trigger modal -->
         <div class="button__bg">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#movieleModal">
             <i class="fa-solid fa-heart"></i>          
           </button>
         </div>
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="movieleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class=" modal-content d-flex justify-content-center align-items-center">
       <!-- <div class="modal-header"> -->
