--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                     <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
                   <!-- </div> -->
                   <!-- <div class="modal-body text-center"> -->
-                    <a href="#">Home</a> <br>
+                    <a href="./index.html">Home</a> <br>
                     <a href="./about.html">About</a> <br>
                     <a href="./services.html">Services</a> <br>
                     <a href="./blog.html">Blog Posts</a> <br>
                     <a href="./404_page.html">404 page</a> <br>
                     <a href="./elements.html">Elements</a> <br>
                     <a href="./contact.html">Contact</a> <br>
-                    <a href="">Landing page</a>
+                    <a href="./landing_page.html">Landing page</a>
                   <!-- </div> -->
                   <!-- <div class="modal-footer"> -->
                     <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
