--- a/landing_page.html
+++ b/landing_page.html
@@ -73,14 +73,14 @@
                     <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
                   <!-- </div> -->
                   <!-- <div class="modal-body text-center"> -->
-                    <a href="http://127.0.0.1:5502/home.html">Home</a> <br>
-                    <a href="http://127.0.0.1:5500/Capstone_Diner/about.html?#myHeader">About</a> <br>
-                    <a href="http://127.0.0.1:5500/services.html?#myHeader">Services</a> <br>
-                    <a href="http://127.0.0.1:5500/Capstone_Diner/blog.html?#myHeader">Blog Posts</a> <br>
-                    <a href="http://127.0.0.1:5500/404_page.html?#myHeader">404 page</a> <br>
-                    <a href="http://127.0.0.1:5500/elements.html?#myHeader">Elements</a> <br>
-                    <a href="http://127.0.0.1:5500/Capstone_Diner/contact.html?#myHeader">Contact</a> <br>
-                    <a href="http://127.0.0.1:5501/landing_page.html?#myHeader">Landing page</a>
+                    <a href="./index.html">Home</a> <br>
+                    <a href="./about.html">About</a> <br>
+                    <a href="./services.html">Services</a> <br>
+                    <a href="./blog.html">Blog Posts</a> <br>
+                    <a href="./404_page.html">404 page</a> <br>
+                    <a href="./elements.html">Elements</a> <br>
+                    <a href="./contact.html">Contact</a> <br>
+                    <a href="./landing_page.html">Landing page</a>
                   <!-- </div> -->
                   <!-- <div class="modal-footer"> -->
                     <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
