--- a/contact.html
+++ b/contact.html
@@ -10,30 +10,34 @@
   <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    
+
   <!-- Font Awesome cdn -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Google font - Quicksand -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-<!-- Google font - Pacifico -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <!-- Google font - Pacifico -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
 
   <!-- File css -->
   <link rel="stylesheet" href="./css/contact.page.css">
 </head>
+
 <body id="myBody">
   <!-- HEADER -->
   <header id="myHeader">
     <div class="container">
       <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
-          <a href="https://wp.w3layouts.com/diner/" class="fs-2 text-white" id="Home" >Diner</a>
+          <a href="https://wp.w3layouts.com/diner/" class="fs-2 text-white" id="Home">Diner</a>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search here..." aria-label="Search">
             <i class="fa-solid fa-magnifying-glass fs-5"></i>
@@ -42,49 +46,52 @@
               <i class="fa-regular fa-sun btn fs-4 me-2 " id="sun"></i>
             </button>
             <!-- MENU POP UP -->
-            
-            <!-- Button trigger modal -->
-<button type="button" class="border-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  <i class="fa-solid fa-bars btn fs-4 text-white"></i>
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class=" modal-content text-center">
-      <!-- <div class="modal-header"> -->
-        <!-- <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1> -->
-        <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-      <!-- </div> -->
-      <!-- <div class="modal-body text-center"> -->
-        <a href="http://127.0.0.1:5502/index.html">Home</a> <br>
-        <a href="">About</a> <br>
-        <a href="http://127.0.0.1:5502/services.html">Services</a> <br>
-        <a href="">Blog Posts</a> <br>
-        <a href="http://127.0.0.1:5502/404_page.html">404 page</a> <br>
-        <a href="http://127.0.0.1:5502/elements.html">Elements</a> <br>
-        <a href="http://127.0.0.1:5502/contact.html">Contact</a> <br>
-        <a href="">Landing page</a>
-      <!-- </div> -->
-      <!-- <div class="modal-footer"> -->
-        <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-      <!-- </div> -->
-    </div>
-  </div>
-</div>
+            <!-- Button trigger modal -->
+            <button type="button" class="border-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <i class="fa-solid fa-bars btn fs-4 text-white"></i>
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class=" modal-content text-center">
+                  <!-- <div class="modal-header"> -->
+                  <!-- <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1> -->
+                  <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+                  <!-- </div> -->
+                  <!-- <div class="modal-body text-center"> -->
+                  <a href="./index.html">Home</a> <br>
+                  <a href="./about.html">About</a> <br>
+                  <a href="./services.html">Services</a> <br>
+                  <a href="./blog.html">Blog Posts</a> <br>
+                  <a href="./404_page.html">404 page</a> <br>
+                  <a href="./elements.html">Elements</a> <br>
+                  <a href="./contact.html">Contact</a> <br>
+                  <a href="./landing_page.html">Landing page</a>
+                  <!-- </div> -->
+                  <!-- <div class="modal-footer"> -->
+                  <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+                  <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+                  <!-- </div> -->
+                </div>
+              </div>
+            </div>
             <!-- END MENU POP UP -->
           </form>
         </div>
       </nav>
       <div class="direction d-flex justify-content-center fs-5 fw-semibold">
-        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;) url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+        <nav
+          style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;) url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
+          aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item "><a href="https://wp.w3layouts.com/diner/">Home</a></li>
             <li class="breadcrumb-item active text-white" aria-current="page">404 Page</li>
           </ol>
         </nav>
-    </div>
+      </div>
   </header>
 
   <!-- END HEADER -->
@@ -169,7 +176,9 @@
       <!-- CONTACT MAP SECTION  -->
       <div class="map-content">
         <div class="map-iframe">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"   width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
+            width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen>
           </iframe>
         </div>
       </div>
@@ -180,7 +189,7 @@
   <!-- END FIND US  -->
 
   <footer>
-  <!-- FOOTER -->
+    <!-- FOOTER -->
     <div class="container">
       <div class="content">
         <div class="container">
@@ -192,7 +201,8 @@
                     <h4 class="mb-4">Diner</h4>
                   </a>
                   <p class="text-white">
-                    Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet Semper at elit.
+                    Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
+                    tempufddfel. Lorem ipsum dolor sit amet Semper at elit.
                   </p>
                 </div>
                 <div class="icons d-flex">
@@ -239,13 +249,14 @@
             <div class="col-4">
               <div class="subcribe">
                 <h4 class="mb-4">Subscribe to our Newsletter</h4>
-                <p class="mb-4">Enter your email and receive the latest news, 
-                  <br> 
+                <p class="mb-4">Enter your email and receive the latest news,
+                  <br>
                   updates and special offers from us.
                 </p>
                 <div class="mb-3">
                   <!-- <label for="" class="form-label">Email</label> -->
-                  <input type="email" class="form-control" name="" id="Email" aria-describedby="emailHelpId" placeholder="Your Email Address">
+                  <input type="email" class="form-control" name="" id="Email" aria-describedby="emailHelpId"
+                    placeholder="Your Email Address">
                   <!-- <small id="emailHelpId" class="form-text text-muted">Help text</small> -->
                 </div>
                 <div class="button">
@@ -257,38 +268,38 @@
         </div>
       </div>
     </div>
-  <!-- END FOOTER -->
+    <!-- END FOOTER -->
 
-  <!-- BACK TO TOP -->
-  <div class="gohome d-flex justify-content-end">
+    <!-- BACK TO TOP -->
+    <div class="gohome d-flex justify-content-end">
       <div class="backtotop d-flex justify-content-center align-items-center rounded-5">
         <a href="#myHeader">
           <i class="fa-solid fa-angle-up"></i>
         </a>
       </div>
-  </div>
-  <!-- END BACK TO TOP -->
+    </div>
+    <!-- END BACK TO TOP -->
 
-  <!-- COPYRIGHT -->
-  <div class="copyright">
-    <div class="container">
-      <div class="text d-flex">
-        <p class="text-white">© 2023 Diner. All Rights Reserved | WordPress Theme by</p>
-        <a href="#">NHOM 3 DINNER</a>
+    <!-- COPYRIGHT -->
+    <div class="copyright">
+      <div class="container">
+        <div class="text d-flex">
+          <p class="text-white">© 2023 Diner. All Rights Reserved | WordPress Theme by</p>
+          <a href="#">NHOM 3 DINNER</a>
+        </div>
       </div>
     </div>
-  </div>
-  <!-- END COPYRIGHT -->
+    <!-- END COPYRIGHT -->
   </footer>
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
-  </script>
+    </script>
 
   <!-- file JS -->
   <script src="./js/dark_theme.js"></script>
